# es-lp

./: .env.example  Dockerfile  LICENSE  docker-compose.yaml  ds.sh  http_ca.crt  pyproject.toml
es_lp/: __init__.py  routes.py  sync.py
es_lp/controller/: pokemon_controller.py
es_lp/database/: connection.py
es_lp/middleware/: messages.py
es_lp/models/: pokemon.py
es_lp/utils/: config.py
hurl/: create_pokemon.hurl  get_pokemons.hurl  pokemon.hurl  sample.hurl
