[tool.poetry]
name = "es-lp"
version = "0.1.0"
description = ""
authors = ["victor4pinheiro <victor.pinheiro.soft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
elasticsearch = "^8.11.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
